# mle-training

./: .gitignore  README.md  env.yml  pyproject.toml  setup.py  standardcode.py
deploy/: .dockerignore  Dockerfile  docker-compose.yml  env.yml
deploy/base_image/: Dockerfile  env.yml
docs/source/: conf.py  house_price_prediction.data_scripts.rst  house_price_prediction.rst  house_price_prediction.utility_scripts.rst  index.rst
house_price_prediction/: ml_flow_script.py
house_price_prediction/data_scripts/: create_features.py  download_data.py  explore_data.py  split_data.py
house_price_prediction/model_scoring_scripts/: score.py
house_price_prediction/model_training_scripts/: train.py
house_price_prediction/utility_scripts/: log_config.py  utils.py
house_price_prediction_omkar/: main_script.sh  ml_flow_script.py
house_price_prediction_omkar/data_scripts/: create_features.py  download_data.py  explore_data.py  split_data.py
house_price_prediction_omkar/model_scoring_scripts/: score.py
house_price_prediction_omkar/model_training_scripts/: train.py
mletraining.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/data_script_tests/: test_download_data.py
