[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "house_price_prediction_omkar"
version = "0.4"
authors = [
  { name="Omkar chavan", email="omkar.chavan@tigeranalytics.com" },
]
description = "Package to train models and predict housing prices."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]